@@ -43,6 +43,7 @@
     "@sharcoux/slider": "^6.1.1",
     "@tanstack/react-query": "^4.19.1",
     "axios": "^0.27.2",
+    "diff": "^5.1.0",
     "expo": "^47.0.8",
     "expo-auth-session": "^3.7.3",
     "expo-av": "^13.0.2",
@@ -101,6 +102,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@expo/config": "^7.0.3",
+    "@types/diff": "^5.0.2",
     "@types/linkify-it": "^3.0.2",
     "@types/lodash": "^4.14.191",
     "@types/react": "~18.0.26",
