@@ -1,6 +1,7 @@
 toooting愉快！此版本包括以下改进和修复：
 - 自动识别发嘟语言
 - 记住上次公共时间轴选项
+- 显示编辑历史的差异
 - 新增管理员推送通知
 - 修复过滤整词功能
 - 修复平板不能删除草稿
