@@ -1,6 +1,7 @@
 Enjoy toooting! This version includes following improvements and fixes:
 - Automatic setting detected language when tooting
 - Remember public timeline type selection
+- Show diffing of edit history
 - Added notification for admins
 - Fix whole word filter matching
 - Fix tablet cannot delete toot drafts
